[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://coin-dash/assets/grass.png" type="Texture" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Coin.tscn" type="PackedScene" id=4]
[ext_resource path="res://coin-dash/assets/Kenney Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://HUD.gd" type="Script" id=6]
[ext_resource path="res://coin-dash/assets/sound/Coin.wav" type="AudioStream" id=7]
[ext_resource path="res://coin-dash/assets/sound/Hit.wav" type="AudioStream" id=8]
[ext_resource path="res://coin-dash/assets/sound/Level.wav" type="AudioStream" id=9]
[ext_resource path="res://coin-dash/assets/sound/Powerup.wav" type="AudioStream" id=10]
[ext_resource path="res://Powerup.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[node name="Main" type="Node"]
script = ExtResource( 3 )
Coin = ExtResource( 4 )
Powerup = ExtResource( 11 )
playtime = 30

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="PlayerStart" type="Position2D" parent="."]
position = Vector2( 240, 350 )

[node name="GameTimer" type="Timer" parent="."]

[node name="CoinContainer" type="Node" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="MessageLabel" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -186.0
margin_right = 186.0
custom_fonts/font = SubResource( 1 )
text = "Coin Dash"
align = 2
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
anchor_right = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="ScoreLabel" type="Label" parent="HUD/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 470.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 1 )
text = "0"
valign = 1

[node name="TimeLabel" type="Label" parent="HUD/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 470.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
valign = 1

[node name="MessageTimer" type="Timer" parent="HUD"]
wait_time = 2.0
one_shot = true

[node name="StartButton" type="Button" parent="HUD"]
light_mask = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -502.0
margin_top = -100.0
margin_right = 502.0
custom_fonts/font = SubResource( 2 )
shortcut_in_tooltip = false
text = "Start"
flat = true

[node name="CoinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="LevelSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="EndSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="PowerupTimer" type="Timer" parent="."]
one_shot = true

[node name="PowerupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="hurt" from="Player" to="." method="_on_Player_hurt"]
[connection signal="pickup" from="Player" to="." method="_on_Player_pickup"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="HUD/MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="timeout" from="HUD/MessageTimer" to="HUD" method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="HUD/StartButton" to="HUD" method="_on_StartButton_pressed"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_PowerupTimer_timeout"]
